--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                              <div class="card h-100">
                                <h4 class="card-header">Product 1</h4>
                                <div class="card-body">
-                                   <img src="http://placehold.it/250x250" class="img-thumbnail" alt="">
+                                   <img src="http://placehold.it/250x250" class="img-thumbnail" alt="cant">
                                  <p class="card-text">Discription</p>
                                </div>
                                <div class="card-footer">
@@ -152,7 +152,7 @@
                            <div class="col-lg-4 mb-4">
                              <div class="card h-100">
                                <h4 class="card-header">Product 2</h4>
-                               <img src="http://placehold.it/250x250" class="img-thumbnail" alt="">
+                               <img src="http://placehold.it/250x250" class="img-thumbnail" alt="cant">
                                <div class="card-body">
                                  <p class="card-text">Discription</p>
                                </div>
@@ -165,7 +165,7 @@
                              <div class="card h-100">
                                <h4 class="card-header">Product 3</h4>
                                <div class="card-body">
-                                   <img src="http://placehold.it/250x250" class="img-thumbnail" alt="">
+                                   <img src="http://placehold.it/250x250" class="img-thumbnail" alt="cant">
                                  <p class="card-text">Discription</p>
                                </div>
                                <div class="card-footer">
@@ -187,7 +187,7 @@
                         <div class="card h-100">
                           <h4 class="card-header">Product 1</h4>
                           <div class="card-body">
-                              <img src="http://placehold.it/250x250" class="img-thumbnail img-responsive" alt="">
+                              <img src="http://placehold.it/250x250" class="img-thumbnail img-responsive" alt="cant">
                             <p class="card-text">Discription</p>
                           </div>
                           <div class="card-footer">
@@ -198,7 +198,7 @@
                       <div class="col-lg-4 mb-4">
                         <div class="card h-100">
                           <h4 class="card-header">Product 2</h4>
-                          <img src="http://placehold.it/250x250" class="img-thumbnail img-responsive" alt="">
+                          <img src="http://placehold.it/250x250" class="img-thumbnail img-responsive" alt="cant">
                           <div class="card-body">
                             <p class="card-text">Discription</p>
                           </div>
@@ -211,7 +211,7 @@
                         <div class="card h-100">
                           <h4 class="card-header">Product 3</h4>
                           <div class="card-body">
-                              <img src="http://placehold.it/250x250" class="img-thumbnail img-responsive" alt="">
+                              <img src="http://placehold.it/250x250" class="img-thumbnail img-responsive" alt="cant">
                             <p class="card-text">Discription</p>
                           </div>
                           <div class="card-footer">
