--- a/product.html
+++ b/product.html
@@ -108,7 +108,7 @@
                             <div class="card h-100">
                               <h4 class="card-header">Product 1</h4>
                               <div class="card-body">
-                                  <img src="http://placehold.it/250x250" class="img-thumbnail" alt="">
+                                  <img src="http://placehold.it/250x250" class="img-thumbnail" alt="cant">
                                 <p class="card-text">Discription</p>
                               </div>
                               <div class="card-footer">
@@ -119,7 +119,7 @@
                           <div class="col-lg-4 mb-4">
                             <div class="card h-100">
                               <h4 class="card-header">Product 2</h4>
-                              <img src="http://placehold.it/250x250" class="img-thumbnail" alt="">
+                              <img src="http://placehold.it/250x250" class="img-thumbnail" alt="cant">
                               <div class="card-body">
                                 <p class="card-text">Discription</p>
                               </div>
@@ -132,7 +132,7 @@
                             <div class="card h-100">
                               <h4 class="card-header">Product 3</h4>
                               <div class="card-body">
-                                  <img src="http://placehold.it/250x250" class="img-thumbnail" alt="">
+                                  <img src="http://placehold.it/250x250" class="img-thumbnail" alt="cant">
                                 <p class="card-text">Discription</p>
                               </div>
                               <div class="card-footer">
@@ -154,7 +154,7 @@
                     <div class="card h-100">
                       <h4 class="card-header">Product 1</h4>
                       <div class="card-body">
-                          <img src="http://placehold.it/250x250" class="img-thumbnail" alt="">
+                          <img src="http://placehold.it/250x250" class="img-thumbnail" alt="cant">
                         <p class="card-text">Discription</p>
                       </div>
                       <div class="card-footer">
@@ -165,7 +165,7 @@
                   <div class="col-lg-4 mb-4">
                     <div class="card h-100">
                       <h4 class="card-header">Product 2</h4>
-                      <img src="http://placehold.it/250x250" class="img-thumbnail" alt="">
+                      <img src="http://placehold.it/250x250" class="img-thumbnail" alt="cant">
                       <div class="card-body">
                         <p class="card-text">Discription</p>
                       </div>
@@ -178,7 +178,7 @@
                     <div class="card h-100">
                       <h4 class="card-header">Product 3</h4>
                       <div class="card-body">
-                          <img src="http://placehold.it/250x250" class="img-thumbnail" alt="">
+                          <img src="http://placehold.it/250x250" class="img-thumbnail" alt="cant">
                         <p class="card-text">Discription</p>
                       </div>
                       <div class="card-footer">
@@ -200,7 +200,7 @@
             <div class="card h-100">
               <h4 class="card-header">Product 1</h4>
               <div class="card-body">
-                  <img src="http://placehold.it/250x250" class="img-thumbnail" alt="">
+                  <img src="http://placehold.it/250x250" class="img-thumbnail" alt="cant">
                 <p class="card-text">Discription</p>
               </div>
               <div class="card-footer">
@@ -211,7 +211,7 @@
           <div class="col-lg-4 mb-4">
             <div class="card h-100">
               <h4 class="card-header">Product 2</h4>
-              <img src="http://placehold.it/250x250" class="img-thumbnail" alt="">
+              <img src="http://placehold.it/250x250" class="img-thumbnail" alt="cant">
               <div class="card-body">
                 <p class="card-text">Discription</p>
               </div>
@@ -224,7 +224,7 @@
             <div class="card h-100">
               <h4 class="card-header">Product 3</h4>
               <div class="card-body">
-                  <img src="http://placehold.it/250x250" class="img-thumbnail" alt="">
+                  <img src="http://placehold.it/250x250" class="img-thumbnail" alt="cant">
                 <p class="card-text">Discription</p>
               </div>
               <div class="card-footer">
@@ -246,7 +246,7 @@
             <div class="card h-100">
               <h4 class="card-header">Product 1</h4>
               <div class="card-body">
-                  <img src="http://placehold.it/250x250" class="img-thumbnail" alt="">
+                  <img src="http://placehold.it/250x250" class="img-thumbnail" alt="cant">
                 <p class="card-text">Discription</p>
               </div>
               <div class="card-footer">
@@ -257,7 +257,7 @@
           <div class="col-lg-4 mb-4">
             <div class="card h-100">
               <h4 class="card-header">Product 2</h4>
-              <img src="http://placehold.it/250x250" class="img-thumbnail" alt="">
+              <img src="http://placehold.it/250x250" class="img-thumbnail" alt="cant">
               <div class="card-body">
                 <p class="card-text">Discription</p>
               </div>
@@ -270,7 +270,7 @@
             <div class="card h-100">
               <h4 class="card-header">Product 3</h4>
               <div class="card-body">
-                  <img src="http://placehold.it/250x250" class="img-thumbnail" alt="">
+                  <img src="http://placehold.it/250x250" class="img-thumbnail" alt="cant">
                 <p class="card-text">Discription</p>
               </div>
               <div class="card-footer">
