--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
                
                 <div class="row">
                   <div class="col-lg-6">
-                    <img class="img-fluid rounded mb-4" src="http://placehold.it/450x450" alt="">
+                    <img class="img-fluid rounded mb-4" src="http://placehold.it/450x450" alt="cant">
                   </div>
                   <div class="col-lg-6">
                     <h2>About our Business</h2>
@@ -97,7 +97,7 @@
                 <div class="row">
                   <div class="col-lg-4 mb-4">
                     <div class="card h-100 text-center">
-                      <img class="card-img-top" src="http://placehold.it/350x350" alt="">
+                      <img class="card-img-top" src="http://placehold.it/350x350" alt="cant">
                       <div class="card-body">
                         <h4 class="card-title">Team Member 1</h4>
                         <h6 class="card-subtitle mb-2 text-muted">Position</h6>
@@ -108,7 +108,7 @@
                   </div>
                   <div class="col-lg-4 mb-4">
                     <div class="card h-100 text-center">
-                      <img class="card-img-top" src="http://placehold.it/350x350" alt="">
+                      <img class="card-img-top" src="http://placehold.it/350x350" alt="cant">
                       <div class="card-body">
                         <h4 class="card-title">Team Member 2</h4>
                         <h6 class="card-subtitle mb-2 text-muted">Position</h6>
@@ -119,7 +119,7 @@
                   </div>
                   <div class="col-lg-4 mb-4">
                     <div class="card h-100 text-center">
-                      <img class="card-img-top" src="http://placehold.it/350x350" alt="">
+                      <img class="card-img-top" src="http://placehold.it/350x350" alt="cant">
                       <div class="card-body">
                         <h4 class="card-title">Team Member 3</h4>
                         <h6 class="card-subtitle mb-2 text-muted">Position</h6>
